add mongo connection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=beautymanager
+spring.data.mongodb.uri=mongodb://root:password@localhost:27017
+spring.data.mongodb.database=beauty_manager
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
