feat(appointments): List appointments

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.data.mongodb.uri=mongodb://root:password@localhost:27017
 spring.data.mongodb.database=beauty_manager
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
+spring.docker.compose.enabled=false
